--- a/app/Resources/views/master.html.twig
+++ b/app/Resources/views/master.html.twig
@@ -7,44 +7,73 @@
 
         {% block meta %}{% endblock %}
 
-        {% block style %}{% endblock %}
+        {% block style %}
+            <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+        {% endblock %}
     </head>
     <body>
-        <header>
-            {% block header %}
-                <nav>
-                    <ul>
-                        <li><a href="{{ sulu_content_root_path() }}">Homepage</a></li>
-                        {% for item in sulu_navigation_root_tree('main') %}
-                            <li>
-                                <a href="{{ sulu_content_path(item.url) }}"
-                                   title="{{ item.title }}">{{ item.title }}</a>
-                            </li>
-                        {% endfor %}
-                    </ul>
+        <div class="container">
+            <header>
+                <nav class="navbar navbar-inverse">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/">letsrock</a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li><a href="/">Homepage</a></li>
+                            {% for item in sulu_navigation_root_tree('main') %}
+                                <li>
+                                    <a href="{{ item.url }}"
+                                       title="{{ item.title }}">{{ item.title }}</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                        <form action="{{ path('sulu_search.website_search') }}" method="GET" class="navbar-form navbar-right">
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="q" placeholder="Search">
+                            </div>
+                            <button type="submit" class="btn btn-default">Go</button>
+                        </form>
+                    </div>
                 </nav>
-            {% endblock %}
-        </header>
+            </header>
 
-        <form action="{{ path('sulu_search.website_search') }}" method="GET">
-            <input name="q" type="text" placeholder="Search" />
-            <input type="submit" value="Go" />
-        </form>
+            <div class="row">
+                {% if block('aside')|length > 0 %}
+                    <aside class="col-sm-3">
+                        {% block aside %}{% endblock %}
+                    </aside>
 
-        <section id="content" vocab="http://schema.org/" typeof="Content">
-            {% block content %}{% endblock %}
-        </section>
+                    <section class="col-sm-9" id="content" vocab="http://schema.org/" typeof="Content">
+                        {% block content %}{% endblock %}
+                    </section>
+                {% else %}
+                    <section class="col-sm-12" id="content" vocab="http://schema.org/" typeof="Content">
+                        {{ block('content') }}
+                    </section>
+                {% endif %}
+            </div>
 
-        <aside>
-            {% block aside %}{% endblock %}
-        </aside>
+            <footer>
+                {% block footer %}
+                    <p>&copy;  {{ 'now'|date('Y') }} Awesome Web Summer Camp Developer</p>
+                {% endblock %}
+            </footer>
+        </div>
 
-        <footer>
-            {% block footer %}
-                <p>Copyright {{ 'now'|date('Y') }} SULU</p>
-            {% endblock %}
-        </footer>
-
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <script type="text/javascript" src="{{ asset('js/jquery-3.1.0.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('js/bootstrap.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
