--- a/app/Resources/views/templates/homepage.html.twig
+++ b/app/Resources/views/templates/homepage.html.twig
@@ -7,7 +7,9 @@
 {% endblock %}
 
 {% block content %}
-    <h1 property="title">{{ content.title }}</h1>
+    <img src="{{ content.header[0].url }}" class="header-image"/>
+
+    <h1 property="title" class="page-header">{{ content.title }}</h1>
 
     <div property="article">
         {{ content.article|raw }}
