added initial version of assignment

--- a/app/Resources/views/templates/homepage.html.twig
+++ b/app/Resources/views/templates/homepage.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1 property="title">{{ content.title }}</h1>
+    <h1 property="title" class="page-header">{{ content.title }}</h1>
 
     <div property="article">
         {{ content.article|raw }}
