--- a/app/Resources/views/templates/homepage.html.twig
+++ b/app/Resources/views/templates/homepage.html.twig
@@ -7,6 +7,8 @@
 {% endblock %}
 
 {% block content %}
+    <img src="{{ content.header[0].thumbnails['1140x450'] }}" class="header-image"/>
+
     <h1 property="title" class="page-header">{{ content.title }}</h1>
 
     <div property="article">
