--- a/app/Resources/views/templates/homepage.html.twig
+++ b/app/Resources/views/templates/homepage.html.twig
@@ -11,7 +11,7 @@
 
     <h1 property="title" class="page-header">{{ content.title }}</h1>
 
-    <img src="{{ content.header[0].url }}" class="header-image"/>
+    <img src="{{ content.header[0].thumbnails['1140x450'] }}" class="header-image"/>
 
     <div property="article">
         {{ content.article|raw }}
